Fix issue with front image not visible. Fix too fast cards hiding on guess

--- a/main.css
+++ b/main.css
@@ -39,8 +39,6 @@ body {
 }
 
 .card {
-  background: #d4daf7;
-  border-radius: 7px;
   margin: 5px;
   transform: scale(1);
   transition: transform 0.5s;
@@ -55,21 +53,18 @@ body {
 }
 
 .frontImg {
-  backface-visibility: hidden;
   transform: rotateY(180deg);
-  padding: 15%;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
 }
 
+.frontImg,
 .backImg {
   backface-visibility: hidden;
   padding: 15%;
+  border-radius: 7px;
   position: absolute;
   width: 100%;
   height: 100%;
+  background: #d4daf7;
 }
 
 .flip {
